--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,13 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+:root {
+  --sidebar-toggled-width: 15em;
+  --sidebar-hidden-width: 4em;
+  --default-transition: .5s all ease;
+  --sidebar-bg: rgb(36, 36, 36);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,10 +22,35 @@ a {
   box-sizing: border-box;
 }
 
+.container {
+  padding: 1em;
+}
+
+.custom-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.custom-form div {
+  display: flex;
+  flex-direction: column;
+}
+
+.custom-form input {
+  padding: 1em;
+}
+
+.custom-form button[type="submit"] {
+  padding: 1em;
+}
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
