--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
+:root {
+  --sidebar-toggled-width: 15em;
+  --sidebar-hidden-width: 4em;
+  --default-transition: .5s all ease;
+  --sidebar-bg: rgb(36, 36, 36);
+  --body-bg: rgb(28, 28, 28);
+  --card-bg: rgb(46, 46, 46);
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-:root {
-  --sidebar-toggled-width: 15em;
-  --sidebar-hidden-width: 4em;
-  --default-transition: .5s all ease;
-  --sidebar-bg: rgb(36, 36, 36);
 }
 
 a {
@@ -30,6 +32,8 @@ a {
   display: flex;
   flex-direction: column;
   gap: 1em;
+  max-width: 60em;
+  margin: 0 auto;
 }
 
 .custom-form div {
@@ -39,6 +43,10 @@ a {
 
 .custom-form input {
   padding: 1em;
+}
+
+.custom-form label {
+  margin-bottom: .25em;
 }
 
 .custom-form button[type="submit"] {
@@ -53,6 +61,6 @@ a {
 
   body {
     color: white;
-    background: black;
+    background: var(--body-bg);
   }
 }
