--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -2,6 +2,15 @@
   background-color: var(--card-bg);
   border-radius: .25em;
   padding: 1em;
+  max-width: 60rem;
+  margin: 0 auto;
+  margin-bottom: 1em;
+}
+
+.card h3 {
+  margin: 0;
+  margin-bottom: 1em;
+  font-size: 1.25em;
 }
 
 .card table th {
